--- a/Rehab_RAG/experiments/graph_rag_experiment/config.yaml
+++ b/Rehab_RAG/experiments/graph_rag_experiment/config.yaml
@@ -93,7 +93,7 @@ builder:
   # module: rag_components.builders.raptor_builder
   # class: RAPTORBuilder
   # params:
-  #   clustering_eps: 0.4
+  #   clustering_eps: 0.05
   #   min_samples: 2
   #   max_levels: 3
 
@@ -120,7 +120,7 @@ build_components:
     # module: rag_components.embedders.sentence_transformer_embedder
     # class: SentenceTransformerEmbedder
     # params:
-    #   model_name: "intfloat/multilingual-e5-large"
+    #   model_name: "cl-nagoya/ruri-v3-310m"
     #   device: "auto"
 
     # Gemini API
@@ -133,12 +133,16 @@ build_components:
 
 
   # [LLM] (RAPTOR/GraphBuilder使用時に必須) 要約やグラフ抽出に使用
-  llm:
+  llm:  
+    # module: rag_components.llms.ollama_llm
+    # class: OllamaLLM
+    # params:
+    #   model_name: "qwen3:8b"
+
     module: rag_components.llms.gemini_llm
     class: GeminiLLM
     params:
       model_name: "gemini-2.5-flash-lite"
-
 
 
   # [リトリーバー] (DefaultBuilderまたはHybrid Search実験時に必須)
@@ -160,12 +164,15 @@ build_components:
 query_components:
   # [LLM] (必須) 最終的な回答生成や、各種コンポーネント内で使用
   llm:
-    module: rag_components.llms.gemini_llm
-    class: GeminiLLM
+    # module: rag_components.llms.gemini_llm
+    # class: GeminiLLM
+    # params:
+    #   model_name: "gemini-2.5-flash-lite"
+    #   safety_block_none: true
+    module: rag_components.llms.ollama_llm
+    class: OllamaLLM
     params:
-      model_name: "gemini-2.5-flash-lite"
-      safety_block_none: true
-
+      model_name: "qwen3:8b"
 
 
   # [エンベッダー] (GraphRetriever以外で必須) ユーザーの質問をベクトル化
@@ -175,7 +182,7 @@ query_components:
     # module: rag_components.embedders.sentence_transformer_embedder
     # class: SentenceTransformerEmbedder
     # params:
-    #   model_name: "intfloat/multilingual-e5-large"
+    #   model_name: "cl-nagoya/ruri-v3-310m"
     #   device: "auto"
 
     # 例2: Gemini API
@@ -229,25 +236,30 @@ query_components:
   # [リランカー (Reranker)]
   # 検索結果をより高精度に並べ替えます。無効にする場合はセクションごとコメントアウト。
   reranker:
-    module: rag_components.rerankers.cross_encoder_reranker
-    class: CrossEncoderReranker
-    params:
-      model_name: "BAAI/bge-reranker-v2-m3"
+    # module: rag_components.rerankers.cross_encoder_reranker
+    # class: CrossEncoderReranker
+    # params:
+    #   model_name: "BAAI/bge-reranker-v2-m3"
 
+    module: rag_components.rerankers.gemini_embedding_reranker
+    class: GeminiEmbeddingReranker
+    params: {} # embedderは RAGExecutor によって自動的に注入される想定
 
 
   # [フィルタ (Filter)]
   # 検索結果のノイズを除去します。いずれか一つを有効化するか、セクションごとコメントアウトして無効化。
   filter:
-    # 例1: NLIFilter (自然言語推論による矛盾フィルタ)
-    - module: rag_components.filters.nli_filter
-      class: NLIFilter
-      params:
-        model_name: "MoritzLaurer/mDeBERTa-v3-base-mnli-xnli"
+    # - module: rag_components.filters.nli_filter
+    #   class: NLIFilter
+    #   params:
+    #     model_name: "MoritzLaurer/mDeBERTa-v3-base-mnli-xnli"
+    # ↑例1: NLIFilter (自然言語推論による矛盾フィルタ)↑
 
-    # 例2: SelfReflectiveFilter (LLMによる自己評価フィルタ)
-    # - module: rag_components.filters.self_reflective_filter
-    #   class: SelfReflectiveFilter
+    - module: rag_components.filters.self_reflective_filter
+      class: SelfReflectiveFilter
+      params:
+        batch_size: 10
+    # ↑例2: SelfReflectiveFilter (LLMによる自己評価フィルタ)↑
 
 
 # 知識源となるドキュメントが格納されているフォルダのパス
