--- a/Rehab_RAG/experiments/graph_rag_experiment/config.yaml
+++ b/Rehab_RAG/experiments/graph_rag_experiment/config.yaml
@@ -212,11 +212,12 @@ query_components:
     # module: rag_components.query_enhancers.hyde_generator
     # class: HydeQueryEnhancer
     # params:
-    #   llm: 
-    #     module: rag_components.llms.ollama_llm
-    #     class: OllamaLLM
-    #     params:
-    #       model_name: "hf.co/unsloth/medgemma-4b-it-GGUF:Q4_K_M"
+    #   thinking_mode: 'off'
+      # llm: 
+      #   module: rag_components.llms.ollama_llm
+      #   class: OllamaLLM
+      #   params:
+      #     model_name: "hf.co/unsloth/Qwen3-8B-GGUF:Q4_K_M"
 
 
 
