--- a/Rehab_RAG/experiments/raptor_experiment/config.yaml
+++ b/Rehab_RAG/experiments/raptor_experiment/config.yaml
@@ -212,7 +212,8 @@ query_components:
     # 例2: HydeQueryEnhancer (架空の回答を生成して検索)
     module: rag_components.query_enhancers.hyde_generator
     class: HydeQueryEnhancer
-    # params:
+    params:
+      thinking_mode: 'off'
     #   llm: 
     #     module: rag_components.llms.ollama_llm
     #     class: OllamaLLM
