--- a/Rehab_RAG/experiments/structured_semantic_chunk-hyde_prf-chromadb_sentencetransformers-reranker-nli_filter/config.yaml
+++ b/Rehab_RAG/experiments/structured_semantic_chunk-hyde_prf-chromadb_sentencetransformers-reranker-nli_filter/config.yaml
@@ -213,6 +213,7 @@ query_components:
     module: rag_components.query_enhancers.hyde_generator
     class: HydeQueryEnhancer
     # params:
+      # thinking_mode: 'off'
     #   llm: 
     #     module: rag_components.llms.ollama_llm
     #     class: OllamaLLM
