--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,10 @@ services:
   nginx:
     image: nginx:1.25-alpine
     container_name: rehab_app_nginx
+    restart: always
     ports:
       # ブラウザからのアクセス(5000番)をNginxが受け取る
-      - "5000:80"
+      - "8000:80"
     volumes:
       # 作成した設定ファイルを読み込ませる
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
@@ -22,6 +23,7 @@ services:
     build: . # カレントディレクトリのDockerfileを使用
     container_name: rehab_app_web
     user: root
+    restart: always
     expose:            # Docker内部でのみ8080番を開放
       - "8080"
     # ports:
@@ -48,6 +50,7 @@ services:
   db:
     image: mysql:8.0 # Docker HubからMySQL 8.0イメージを取得
     container_name: rehab_app_db
+    restart: always
     ports:
       # ローカルPCの3307番ポートをコンテナの3306番ポートに接続
       # (ローカルPCでMySQLが動いている場合、3306以外のポートに変更)
