--- a/requirementsGPU.txt
+++ b/requirementsGPU.txt
@@ -44,6 +44,7 @@ fsspec==2024.12.0
 ginza==5.2.0
 gitdb==4.0.12
 GitPython==3.1.45
+gliner2
 google-ai-generativelanguage==0.6.18
 google-api-core==2.25.1
 google-api-python-client==2.176.0
