--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     container_name: rehab_app_nginx
     restart: always
     ports:
-      # ブラウザからのアクセス(5000番)をNginxが受け取る
-      - "8000:80"
+      # ロードバランサーからの通信(HTTP)を受け取る
+      - "80:80"
     volumes:
       # 作成した設定ファイルを読み込ませる
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
@@ -40,52 +40,13 @@ services:
       - ./output:/app/output
       # ログをローカルでも確認 (任意)
       - ./logs:/app/logs
-    depends_on:
-      db: # 'db'サービス(MySQL)が起動し、ヘルスチェックが通るまで待機
-        condition: service_healthy
+
     networks:
       - rehabnet
 
-  # 2. MySQLデータベース (db)
-  db:
-    image: mysql:8.0 # Docker HubからMySQL 8.0イメージを取得
-    container_name: rehab_app_db
-    restart: always
-    ports:
-      # ローカルPCの3307番ポートをコンテナの3306番ポートに接続
-      # (ローカルPCでMySQLが動いている場合、3306以外のポートに変更)
-      - "3307:3306"
-    env_file:
-      - .env # .envからMYSQL_ROOT_PASSWORDなどを読み込む
-    environment:
-      MYSQL_DATABASE: rehab_db # rehab_db データベースを自動作成
-    command:
-      # 文字コードと認証プラグインを指定
-      - --default-authentication-plugin=mysql_native_password
-      - --character-set-server=utf8mb4
-      - --collation-server=utf8mb4_general_ci
-      - --innodb-buffer-pool-size=64M  # キャッシュ領域を64MBに制限 (デフォルトは128MB以上)
-      - --max-connections=20           # 同時接続数を制限してメモリ消費を抑える
-    volumes:
-      # MySQLデータをローカルに永続化
-      - mysql_data:/var/lib/mysql
-      # 初回起動時にschema.sqlを読み込ませてテーブルを自動作成
-      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
-    networks:
-      - rehabnet
-    healthcheck:
-      # MySQLサーバーが応答可能になるまで待機
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "-u$$DB_USER", "-p$$DB_PASSWORD"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+
 
 # コンテナ間通信用のネットワーク
 networks:
   rehabnet:
     driver: bridge
-
-# データを永続化するための名前付きボリューム
-volumes:
-  mysql_data:
-  rag_db_data:
