--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,10 +2,16 @@ server {
     listen 80;
     server_name localhost;
 
+    gzip on;
+    gzip_types text/css application/javascript application/json application/x-javascript text/javascript image/svg+xml;
+    gzip_min_length 1024;  # 1KB以下の小さいファイルは圧縮しない（CPUの無駄なので）
+    gzip_vary on;          # キャッシュサーバーへの対応
+
     # 1. 静的ファイル（CSS/JS/画像）はNginxが直接高速に返す
     location /static/ {
         alias /usr/share/nginx/html/static/;
         expires 30d; # 30日間キャッシュさせる（高速化）
+        access_log off;
     }
 
     # 2. それ以外のアクセスはPythonアプリへ転送する
